# JobSpy

./: .gitignore  README.md  pyproject.toml  search-jobs.ps1  start-ui.ps1  update-cv.ps1
job_finger/: __init__.py  __main__.py  cli.py  config.py  drafts.py  matching.py  pipeline.py  resume.py  scoring.py  search_terms.py  storage.py  ui_server.py
tests/: test_job_finger.py
workspace/: README.md  cover_letter_template.md  observation_template.md
